# financial_intelligence-2

./: .env.example  .gitignore  CLAUDE_UI_REVAMP.md  CONTEXT.md  IMPROVEMENTS.md  README.md  SETUP_FIXED.md  financial_intelligence.db  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: routes.py
app/db/: database.py
app/models/: schemas.py
app/services/: ai_service.py  analytics_orchestrator.py  anomaly_engine.py  behavior_engine.py  cashflow_engine.py  category_engine.py  efficiency_engine.py  savings_engine.py  trend_engine.py
app/utils/: ingestion.py
backend/: database.py  main.py  models.py  models_investment.py  schemas.py
backend/alembic/: env.py
backend/analytics/: anomalies.py  behavior.py  budget.py  category.py  engine.py  monthly.py  savings.py  trends.py  yearly.py
backend/ingestion/: cleaner.py  column_mapper.py  exception.py  investment_pipeline.py  pipeline.py  tagger.py  validator.py
backend/routers/: dashboard.py  notes.py  portfolio.py  upload.py
data/: sample_data.csv
frontend/: README.md  analytics.py  api.py  app.py  charts.py  config.py  formatters.py  insights_engine.py  sidebar.py  streamlit_app.py
frontend/components/: anomalies.py  category_breakdown.py  comparison.py  key_takeaways.py  monthly_trends.py  overview.py  savings.py  tag_analysis.py  yearly_trends.py
frontend/tabs/: action_plan.py  alerts.py  compare.py  data.py  loans.py  networth.py  overview.py  portfolio.py  trends.py
sample_data/: july_update.csv  transactions.csv
(+1 files in other folders)
